
Fixed an incredibly-difficult-to-track-down missing "break" statement
which caused the "New..." and Ctrl-T functionality to fail to prompt
for a tab name.
----------------------------------------------------------------------
Mon Dec  5 15:46:34 2005                        Michael Jennings (mej)

Prevent firewall bounces from trying for the same port.
----------------------------------------------------------------------
Thu Dec 22 18:32:31 2005                        Michael Jennings (mej)

Cleanups and minor enhancements.
----------------------------------------------------------------------
Wed Jan  4 03:44:04 2006                        Michael Jennings (mej)

X resource tracking/debugging support.
----------------------------------------------------------------------
Wed Jan  4 04:14:14 2006                        Michael Jennings (mej)

Applied patches from Tres Melton <tres@mindspring.com> for SSE2
alignment and other shading-related issues.
----------------------------------------------------------------------
Wed Jan  4 04:22:13 2006                        Michael Jennings (mej)

Update copyright dates.
----------------------------------------------------------------------
Thu Jan  5 14:50:53 2006                        Michael Jennings (mej)

Fixed firewall bounce port checking from 2005-12-05.
----------------------------------------------------------------------
Mon Feb  6 01:02:15 2006                        Michael Jennings (mej)

Fixed paste from clipboard.
----------------------------------------------------------------------
Mon Feb  6 17:15:49 2006                        Michael Jennings (mej)

DragonFly BSD fixes from Joerg Sonnenberger <joerg@britannica.bec.de>.

Also some type mismatch fixes.
----------------------------------------------------------------------
Mon Feb 13 14:51:56 2006                        Michael Jennings (mej)

Update to libast 0.6+ API.
----------------------------------------------------------------------